# Visitor-Pattern-Template

./: .gitignore  README
bindings/: FloatNode.cpp  IntNode.cpp  export_listing.hpp  libpyVisitor.cpp
cmake/: CMakeLists.txt  Doxyfile
cmake/Modules/: FindGoogleTest.cmake
include/: Branch.hpp  IntNode.hpp  Node.hpp  Traversable.hpp  Types.hpp  Visitable.hpp  Visitor.hpp
include/Visitor/: Branch.hpp  FloatNode.hpp  IntNode.hpp  Node.hpp  Traversable.hpp  Types.hpp  Visitable.hpp  Visitor.hpp
src/: Branch.cpp  FloatNode.cpp  IntNode.cpp  Node.cpp  Traversable.cpp  Visitable.cpp  Visitor.cpp
tests/: HelloWorld.cpp
tests/gtest/: IntNode.cpp
tests/python/: test_FloatNode.py  test_IntNode.py
