CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
PROJECT(Visitor)
   

SET(MYLIB "Visitor")

FIND_PACKAGE(Boost REQUIRED)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../bin/)
SET(LIBRARY_OUTPUT_PATH    ${CMAKE_SOURCE_DIR}/../lib/)
SET(SRC_DIR ${CMAKE_SOURCE_DIR}/../src/)
SET(APP_DIR ${CMAKE_SOURCE_DIR}/../apps/)
SET(INC_DIR ${CMAKE_SOURCE_DIR}/../include/)

#SET(CMAKE_CXX_FLAGS "-Wall -W -Wshadow -pedantic-errors -pedantic -Wextra -Werror -Wc++0x-compat")
SET(CMAKE_CXX_FLAGS "-Wall -W -Wshadow -pedantic-errors -pedantic -Wextra -Werror")

INCLUDE_DIRECTORIES(${INC_DIR}/../include/)

FILE(GLOB SRC_FILES  ${SRC_DIR}/*.cpp)
FILE(GLOB MAIN_FILES ${CMAKE_SOURCE_DIR}/../apps/*.cpp)

ADD_LIBRARY(${MYLIB} ${SRC_FILES})

FOREACH(APPNAME ${MAIN_FILES})
    GET_FILENAME_COMPONENT(BASENAME ${APPNAME} NAME_WE)
    ADD_EXECUTABLE(${BASENAME} ${APPNAME})
    TARGET_LINK_LIBRARIES(${BASENAME} ${MYLIB})
ENDFOREACH(APPNAME ${MAIN_FILES})

MAKE_DIRECTORY(${LIBRARY_OUTPUT_PATH})
MAKE_DIRECTORY(${EXECUTABLE_OUTPUT_PATH})

ENABLE_TESTING()

SET(TEST_DIR ${CMAKE_SOURCE_DIR}/../tests/)
FILE(GLOB TEST_FILES  ${TEST_DIR}/*.cpp)
MAKE_DIRECTORY(${EXECUTABLE_OUTPUT_PATH}/tests)

FOREACH(TESTNAME ${TEST_FILES})
    GET_FILENAME_COMPONENT(TESTBASENAME ${TESTNAME} NAME_WE)
    ADD_EXECUTABLE( tests/${TESTBASENAME} ${TESTNAME})
    TARGET_LINK_LIBRARIES(tests/${TESTBASENAME} ${MYLIB})
    ADD_TEST(${TESTNAME} ${EXECUTABLE_OUTPUT_PATH}/tests/${TESTBASENAME})
ENDFOREACH(TESTNAME ${TEST_FILES})




